<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="388dp"
        android:layout_height="52dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="51dp"
        android:layout_height="18dp"
        android:text="@string/modulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/turno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <RadioGroup
        android:id="@+id/radioGroupModulo"
        android:layout_width="130dp"
        android:layout_height="147dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioBtnDam"
            style="@style/rdioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dam"
            android:textColorLink="#00BCD4" />

        <RadioButton
            android:id="@+id/radioBtnDaw"
            style="@style/rdioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daw" />

        <RadioButton
            android:id="@+id/radioBtnAsir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/asir" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupTurno"
        android:layout_width="136dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toEndOf="@+id/radioGroupModulo"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.012">

        <RadioButton
            android:id="@+id/radioBtnManiana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mañana" />

        <RadioButton
            android:id="@+id/radioBtnTarde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tarde" />

        <RadioButton
            android:id="@+id/radioBtnOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online" />
    </RadioGroup>

    <Switch
        android:id="@+id/iva"
        android:layout_width="173dp"
        android:layout_height="31dp"
        android:layout_marginBottom="116dp"
        android:text="@string/iva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPrecio"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/iva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>